Source Code block: Ensure the header buttons have enough space to prevent wrapping.
See #441 — That fix does not work in Firefox, so for a cross-browser fix, this updates the header to use a grid layout with a set width for the button column.

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -465,13 +465,14 @@ pre {
 		> span:last-child {
 			display: flex;
 			gap: 8px;
+			justify-content: end;
 		}
 	}
 
 	@media screen and (min-width: 600px) {
 		.wp-code-block-button-container {
-			flex-direction: row;
-			align-items: baseline;
+			display: grid;
+			grid-template-columns: auto 13rem;
 		}
 	}
 
